--- a/package.json
+++ b/package.json
@@ -16,6 +16,11 @@
     "@mui/icons-material": "^7.3.6",
     "@mui/material": "^7.3.6",
     "@mui/x-data-grid": "^8.22.0",
+    "@nivo/core": "^0.99.0",
+    "@nivo/heatmap": "^0.99.0",
+    "@nivo/radial-bar": "^0.99.0",
+    "@nivo/stream": "^0.99.0",
+    "@nivo/sunburst": "^0.99.0",
     "@tanstack/react-query": "^5.90.12",
     "framer-motion": "^12.23.26",
     "react": "^19.2.0",
